# mp4CrashRecorder

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TECHNICAL_ANALYSIS.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API.md  DESIGN.md  INDEX.md  RECOVERY.md  TESTING.md  TROUBLESHOOTING.md
examples/: advanced_recording.cpp  basic_recording.cpp  crash_simulation.cpp  crash_simulation_test.cpp  error_handling.cpp  moov_builder_test.cpp  mp4_playback_verify.cpp  mp4_recover_demo.cpp  multithreaded_recording.cpp  realtime_encoding_demo.cpp  recovery_demo.cpp  run_with_video_stream.py
include/: common.h  file_ops.h  index_file.h  moov_builder.h  mp4_recorder.h
src/: common.cpp  file_ops.cpp  index_file.cpp  moov_builder.cpp  mp4_recorder.cpp
